--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           <a class="g-section" href="GMMPF/GMMPF.html">
             <h2>MEMES DE COCHES</h2>
             <img
-              src="/img/F4Y3MNZWEAE7zpC.jpg"
+              src="img/F4Y3MNZWEAE7zpC.jpg"
               alt="mme4"
               class="g-img"/>
           </a>
