--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
           <a href="index.html">Inicio</a>
         </li>
         <li>
-          <a href="/GMMPF/GMMPF.html">Galería</a>
+          <a href="GMMPF/GMMPF.html">Galería</a>
         </li>
         <li>
-          <a href="/nosotros/nosotros.html">Nosotros</a>
+          <a href="nosotros/nosotros.html">Nosotros</a>
         </li>
         <li>
-          <a href="/subetusmemes/subetusmemes.html">Contacto</a>  
+          <a href="subetusmemes/subetusmemes.html">Contacto</a>  
         </li>
         <li>
-          <a href="/dondeencontrarnos/dondeencontrarnos.html">Localizacion</a>
+          <a href="dondeencontrarnos/dondeencontrarnos.html">Localizacion</a>
         </li>
       </ul>
     </nav>
@@ -74,7 +74,7 @@
           <a class="g-section" href="GMMPF/GMMPF.html">
             <h2>MEMES DE COCHES</h2>
             <img
-              src="/img/F4Y3MNZWEAE7zpC.jpg"
+              src="img/F4Y3MNZWEAE7zpC.jpg"
               alt="mme4"
               class="g-img"/>
           </a>
