--- a/GMMPF/GMMPF.html
+++ b/GMMPF/GMMPF.html
@@ -16,19 +16,19 @@
     <nav>
       <ul>
         <li>
-          <a href="/index.html">Inicio</a>
+          <a href="index.html">Inicio</a>
         </li>
         <li>
           <a href="GMMPF.html">Galeria</a>
         </li>
         <li>
-          <a href="/nosotros/nosotros.html">Nosotros</a>
+          <a href="nosotros/nosotros.html">Nosotros</a>
         </li>
         <li>
-          <a href="/subetusmemes/subetusmemes.html">Contacto</a>  
+          <a href="subetusmemes/subetusmemes.html">Contacto</a>  
         </li>
         <li>
-          <a href="/dondeencontrarnos/dondeencontrarnos.html">Localizacion</a>
+          <a href="dondeencontrarnos/dondeencontrarnos.html">Localizacion</a>
         </li>
       </ul>
     </nav>
