--- a/dondeencontrarnos/dondeencontrarnos.html
+++ b/dondeencontrarnos/dondeencontrarnos.html
@@ -17,16 +17,16 @@
         <nav>
             <ul>
             <li>
-                <a href="index.html">Inicio</a>
+                <a href="/index.html">Inicio</a>
             </li>
             <li>
-                <a href="GMMPF/GMMPF.html">Galería</a>
+                <a href="/GMMPF/GMMPF.html">Galería</a>
             </li>
             <li>
-                <a href="nosotros/nosotros.html">Nosotros</a>
+                <a href="/nosotros/nosotros.html">Nosotros</a>
             </li>
             <li>
-                <a href="subetusmemes/subetusmemes.html">Contacto</a>  
+                <a href="/subetusmemes/subetusmemes.html">Contacto</a>  
             </li>
             <li>
                 <a href="dondeencontrarnos.html">Localizacion</a>
