--- a/subetusmemes/subetusmemes.html
+++ b/subetusmemes/subetusmemes.html
@@ -17,19 +17,19 @@
     <nav>
       <ul>
         <li>
-          <a href="ProyectoFinal.html">Inicio</a>
+          <a href="/index.html">Inicio</a>
         </li>
         <li>
-          <a href="GMMPF/GMMPF.html">Galería</a>
+          <a href="/GMMPF/GMMPF.html">Galería</a>
         </li>
         <li>
-          <a href="nosotros/nosotros.html">Nosotros</a>
+          <a href="/nosotros/nosotros.html">Nosotros</a>
         </li>
         <li>
           <a href="subetusmemes.html">Contacto</a>  
         </li>
         <li>
-          <a href="dondeencontrarnos/dondeencontrarnos.html">Localizacion</a>
+          <a href="/dondeencontrarnos/dondeencontrarnos.html">Localizacion</a>
         </li>
       </ul>
     </nav>
