--- a/subetusmemes/subetusmemes.html
+++ b/subetusmemes/subetusmemes.html
@@ -17,19 +17,19 @@
     <nav>
       <ul>
         <li>
-          <a href="/index.html">Inicio</a>
+          <a href="index.html">Inicio</a>
         </li>
         <li>
-          <a href="/GMMPF/GMMPF.html">Galería</a>
+          <a href="GMMPF/GMMPF.html">Galería</a>
         </li>
         <li>
-          <a href="/nosotros/nosotros.html">Nosotros</a>
+          <a href="nosotros/nosotros.html">Nosotros</a>
         </li>
         <li>
           <a href="subetusmemes.html">Contacto</a>  
         </li>
         <li>
-          <a href="/dondeencontrarnos/dondeencontrarnos.html">Localizacion</a>
+          <a href="dondeencontrarnos/dondeencontrarnos.html">Localizacion</a>
         </li>
       </ul>
     </nav>
@@ -51,9 +51,9 @@
         <p>© 2024 MOMAZOS DIEGO</p>
       </div>
       <div class="icns">
-        <a href="https://www.youtube.com/watch?v=OdDWMQ7Cotw"><img src="/img/icon_instagram.png" alt="Instagram"></a>
-        <a href="https://www.youtube.com/watch?v=OdDWMQ7Cotw"><img src="/img/icon_twitter.png" alt="Twitter"></a>
-        <a href="https://www.youtube.com/watch?v=OdDWMQ7Cotw"><img src="/img/icon_facebook.png" alt="Facebook"></a>
+        <a href="https://www.youtube.com/watch?v=OdDWMQ7Cotw"><img src="img/icon_instagram.png" alt="Instagram"></a>
+        <a href="https://www.youtube.com/watch?v=OdDWMQ7Cotw"><img src="img/icon_twitter.png" alt="Twitter"></a>
+        <a href="https://www.youtube.com/watch?v=OdDWMQ7Cotw"><img src="img/icon_facebook.png" alt="Facebook"></a>
       </div>
       <div>
         <p><i>2300 Southern Blvd, Bronx, NY</i></p>
