--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <a href="index.html">Inicio</a>
         </li>
         <li>
-          <a href="GMMPF/GMMPF.html">Galería</a>
+          <a href="./GMMPF/GMMPF.html">Galería</a>
         </li>
         <li>
           <a href="nosotros/nosotros.html">Nosotros</a>
